Fixes quality meter not showing value in chrome

--- a/src/onegov.org/onegov/org/theme/styles/org.scss
+++ b/src/onegov.org/onegov/org/theme/styles/org.scss
@@ -636,7 +636,6 @@ form {
         Password quality meter
     */
     meter {
-        -webkit-appearance: none;
         background: $input-border-color !important;
         border: 0;
         height: 10px;
